--- a/MyPhrasebookAndroid/AndroidManifest.xml
+++ b/MyPhrasebookAndroid/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="skydiver.dev"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="MPBApp">
         <activity android:name=".MainForm"
                   android:label="@string/app_name">
             <intent-filter>
@@ -14,9 +14,9 @@
 
         <activity android:name=".PhrasebookForm" />
         <activity android:name=".QuizForm" />
-
-    <activity android:name=".AddPhraseForm"></activity>
+	    <activity android:name=".AddPhraseForm" />
 </application>
-    <uses-sdk android:minSdkVersion="4" />
+	
+<uses-sdk android:minSdkVersion="4" />
 
 </manifest> 
