--- a/MyPhrasebookDotNet/MyFinnishPhrasebook/MyFinnishPhrasebook.csproj
+++ b/MyPhrasebookDotNet/MyFinnishPhrasebook/MyFinnishPhrasebook.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>MyFinnishPhrasebook</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ApplicationIcon>Resources\AppIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,6 +38,8 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -52,6 +55,15 @@
   <ItemGroup>
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FileVersion.cs" />
+    <Compile Include="MPBDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MPBDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="OneColorBackgroundToolStrip.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -74,6 +86,12 @@
     <Compile Include="DialogForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="QuizForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuizForm.Designer.cs">
+      <DependentUpon>QuizForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TextBoxFinnish.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -84,10 +102,10 @@
     <Compile Include="MyDataGridView.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="MyPhrasebookDataSet.Designer.cs">
+    <Compile Include="MyFinnishPhrasebookDBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>MyPhrasebookDataSet.xsd</DependentUpon>
+      <DependentUpon>MyFinnishPhrasebookDBDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -103,6 +121,9 @@
     <EmbeddedResource Include="DialogForm.resx">
       <DependentUpon>DialogForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="QuizForm.resx">
+      <DependentUpon>QuizForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TextBoxFinnish.resx">
       <DependentUpon>TextBoxFinnish.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,16 +138,16 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
-    <None Include="MyPhrasebookDataSet.xsc">
-      <DependentUpon>MyPhrasebookDataSet.xsd</DependentUpon>
+    <None Include="MyFinnishPhrasebookDBDataSet.xsc">
+      <DependentUpon>MyFinnishPhrasebookDBDataSet.xsd</DependentUpon>
     </None>
-    <None Include="MyPhrasebookDataSet.xsd">
+    <None Include="MyFinnishPhrasebookDBDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>MyPhrasebookDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>MyFinnishPhrasebookDBDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="MyPhrasebookDataSet.xss">
-      <DependentUpon>MyPhrasebookDataSet.xsd</DependentUpon>
+    <None Include="MyFinnishPhrasebookDBDataSet.xss">
+      <DependentUpon>MyFinnishPhrasebookDBDataSet.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -142,6 +163,26 @@
       <SubType>Component</SubType>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Contains.png" />
+    <None Include="Resources\EndsWith.png" />
+    <None Include="Resources\ExactMatch.png" />
+    <None Include="Resources\StartsWith.png" />
+    <None Include="Resources\AppIcon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MPBDataSet.xsc">
+      <DependentUpon>MPBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="MPBDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MPBDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MPBDataSet.xss">
+      <DependentUpon>MPBDataSet.xsd</DependentUpon>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -150,4 +191,13 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup>
+    <PreBuildEvent>if $(ConfigurationName) == Release goto RELEASE_CODE
+goto END
+
+:RELEASE_CODE
+perl $(ProjectDir)\FileVersion.pl $(ProjectDir)\FileVersion.cs
+
+:END</PreBuildEvent>
+  </PropertyGroup>
 </Project>
