--- a/MyPhrasebookDotNet/MyFinnishPhrasebook/app.config
+++ b/MyPhrasebookDotNet/MyFinnishPhrasebook/app.config
@@ -4,22 +4,30 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="MyFinnishPhrasebookNamespace.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MyFinnishPhrasebookNamespace.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
-		<connectionStrings>
-    <add name="DataSetTest.Properties.Settings.MyPhrasebookDB" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Users\Avi\Documents\Finnish\MyFinnishPhrasebook\MyFinnishPhrasebookDB.mdb"
-      providerName="System.Data.OleDb" />
-    <add name="MyFinnishPhrasebookNamespace.Properties.Settings.MyPhrasebookDB"
-      connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Users\Avi\Documents\Finnish\MyFinnishPhrasebook\MyFinnishPhrasebookDB.mdb"
-      providerName="System.Data.OleDb" />
-  </connectionStrings>
-  <applicationSettings>
-    <MyFinnishPhrasebookNamespace.Properties.Settings>
-      <setting name="MyPhrasebookDB_Global" serializeAs="String">
-        <value>Provider=Microsoft.Jet.OLEDB.4.0;Data Source=C:\Users\Avi\Documents\Finnish\MyFinnishPhrasebook\MyFinnishPhrasebookDB.mdb</value>
-      </setting>
-      <setting name="MyPhrasebookDB_Local" serializeAs="String">
-        <value>Provider=Microsoft.Jet.OLEDB.4.0;Data Source=.\MyFinnishPhrasebookDB.mdb</value>
-      </setting>
-    </MyFinnishPhrasebookNamespace.Properties.Settings>
-  </applicationSettings>
+    <connectionStrings>
+        <add name="MyFinnishPhrasebookNamespace.Properties.Settings.MyFinnishPhrasebookDBConnectionString"
+            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\MyFinnishPhrasebookDB.mdb"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
+    <applicationSettings>
+        <MyFinnishPhrasebookNamespace.Properties.Settings>
+            <setting name="DefaultDBDir" serializeAs="String">
+                <value>C:\Users\Avi\Documents\Finnish\MyFinnishPhrasebook</value>
+            </setting>
+        </MyFinnishPhrasebookNamespace.Properties.Settings>
+    </applicationSettings>
+    <userSettings>
+        <MyFinnishPhrasebookNamespace.Properties.Settings>
+            <setting name="ColumnsOrderPersistence" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="QuizQuestionLanguage" serializeAs="String">
+                <value>Both</value>
+            </setting>
+        </MyFinnishPhrasebookNamespace.Properties.Settings>
+    </userSettings>
 </configuration>
