--- a/MyPhrasebookDotNet/MyFinnishPhrasebook/Properties/Settings.settings
+++ b/MyPhrasebookDotNet/MyFinnishPhrasebook/Properties/Settings.settings
@@ -22,10 +22,10 @@
     <Setting Name="MPBConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;data source=c:\Users\Avi\Documents\Programming\WindowsForms\MyFinnishPhrasebook\MyFinnishPhrasebook\Database\mpb.db&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=|DataDirectory|\mpb.db&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SQLite&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">data source=c:\Users\Avi\Documents\Programming\WindowsForms\MyFinnishPhrasebook\MyFinnishPhrasebook\Database\mpb.db</Value>
+      <Value Profile="(Default)">Data Source=|DataDirectory|\mpb.db</Value>
     </Setting>
   </Settings>
 </SettingsFile>
