--- a/MyPhrasebookDotNet/MyFinnishPhrasebook/app.config
+++ b/MyPhrasebookDotNet/MyFinnishPhrasebook/app.config
@@ -12,6 +12,8 @@
         <add name="MyFinnishPhrasebookNamespace.Properties.Settings.MyFinnishPhrasebookDBConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\MyFinnishPhrasebookDB.mdb"
             providerName="System.Data.OleDb" />
+        <add name="MyFinnishPhrasebookNamespace.Properties.Settings.MPBConnectionString"
+            connectionString="Data Source=|DataDirectory|\mpb.db" providerName="System.Data.SQLite" />
     </connectionStrings>
     <applicationSettings>
         <MyFinnishPhrasebookNamespace.Properties.Settings>
