Moved the database to a location mutual with the android counter-application.

--- a/MyPhrasebookDotNet/MyFinnishPhrasebook/app.config
+++ b/MyPhrasebookDotNet/MyFinnishPhrasebook/app.config
@@ -18,7 +18,7 @@
     <applicationSettings>
         <MyFinnishPhrasebookNamespace.Properties.Settings>
             <setting name="DefaultDBDir" serializeAs="String">
-                <value>C:\Users\Avi\Documents\Finnish\MyFinnishPhrasebook</value>
+                <value>..\..\..\..\Database</value>
             </setting>
         </MyFinnishPhrasebookNamespace.Properties.Settings>
     </applicationSettings>
