--- a/MyPhrasebookDotNet/MyFinnishPhrasebook/Properties/Settings.settings
+++ b/MyPhrasebookDotNet/MyFinnishPhrasebook/Properties/Settings.settings
@@ -2,9 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MyFinnishPhrasebookNamespace.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="DefaultDBDir" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\Avi\Documents\Finnish\MyFinnishPhrasebook</Value>
-    </Setting>
     <Setting Name="ColumnsOrderPersistence" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -26,6 +23,9 @@
   &lt;ProviderName&gt;System.Data.SQLite&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=|DataDirectory|\mpb.db</Value>
+    </Setting>
+    <Setting Name="DefaultDBDir" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">..\..\..\..\Database</Value>
     </Setting>
   </Settings>
 </SettingsFile>
