--- a/MyPhrasebookAndroid/.project
+++ b/MyPhrasebookAndroid/.project
@@ -7,11 +7,11 @@
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
-			<triggers>full,</triggers>
+			<triggers>full,incremental,</triggers>
 			<arguments>
 				<dictionary>
 					<key>LaunchConfigHandle</key>
-					<value>&lt;project&gt;/.externalToolBuilders/Copy DB File.launch</value>
+					<value>&lt;project&gt;/.externalToolBuilders/CopyDBFile.launch</value>
 				</dictionary>
 			</arguments>
 		</buildCommand>
