--- a/MyPhrasebookAndroid/AndroidManifest.xml
+++ b/MyPhrasebookAndroid/AndroidManifest.xml
@@ -12,8 +12,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".PhrasebookForm" />
-        <activity android:name=".QuizForm" />
-	    <activity android:name=".AddEditPhraseForm" />	    
+        <activity android:name=".QuizFormMultiChoice" />
+        <activity android:name=".QuizFormWriting" />
+        <activity android:name=".AddEditPhraseForm" />
 </application>
 	
 <uses-sdk android:minSdkVersion="4" />
