Added mpb.db to assets folder

--- a/MyPhrasebookAndroid/app/build.gradle
+++ b/MyPhrasebookAndroid/app/build.gradle
@@ -17,3 +17,10 @@ android {
         }
     }
 }
+
+task copyFiles(type: Copy) {
+    from '../../Database/mpb.db'
+    into 'src/main/assets/'
+}
+
+preBuild.dependsOn(copyFiles)
