--- a/MyPhrasebookAndroid/app/src/main/AndroidManifest.xml
+++ b/MyPhrasebookAndroid/app/src/main/AndroidManifest.xml
@@ -6,9 +6,7 @@
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:name="MPBApp"
-        android:theme="@style/AppTheme"
-        >
+        android:name="MPBApp">
         <activity android:name=".MainForm"
                   android:label="@string/app_name">
             <intent-filter>
